# DFL-Secure-Aggregation

./: .gitignore  pyproject.toml
.feedback/: feedback.aux  feedback.out  temp.txt
config/: experiment.yaml  paper_minst.yaml  sanity.yaml  test.yaml
experiments/: create_networks.py  generate_sweep_configs.py  run_sweep.py  simulate.py
experiments/datasets/: __init__.py  cifar10.py  mnist.py
experiments/models/: __init__.py  mnist_net.py  resnet20.py
experiments/slurm/: sweep_shard.sh
feedback/: feedback.tex
scripts/: slurm_reviewer_cpu_array.sh
src/: create_networks.py  evaluation.py  simulator.py
src/aggregation/: strategies.py
src/attack/: attacks.py
src/byzfl/: __init__.py  data.py  nodebank.py  simulator.py
src/byzfl/aggregation/: __init__.py  fedavg.py  geomed.py  krum.py  median.py  trimmedmean.py
src/byzfl/attack/: __init__.py  attacks.py  noise.py  random_noise.py  signflip.py
src/byzfl/network/: __init__.py  generate.py  placement.py  topology.py
src/config/: experiment.yaml
src/dfl_secure_aggregation/: data.py  evaluation.py  nodebank.py  simulator.py
src/dfl_secure_aggregation/aggregation/: __init__.py  fedavg.py  krum.py  strategies.py  trimmedmean.py
src/dfl_secure_aggregation/attack/: alie.py  attacks.py  ipa.py  noise.py  random_noise.py  signflip.py
src/dfl_secure_aggregation/network/: __init__.py  generate.py  graph.py  topology.py
src/dfl_secure_aggregation/training/: dataloader.py
src/network/: graph.py
src/training/: dataloader.py  device.py
src/training/models/: cifar10_classifier.py  loan_defaulter.py  (+2 more)
(+13 files in other folders)
