[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfl-secure-aggregation"
version = "0.1.0"
description = "Decentralized federated learning simulations with secure aggregation experiments"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
